name:                gapaint
version:             0.1.0.0
synopsis:            Painting with Genetic Algorithms
-- description:         
homepage:            http://www.itsahack.com/gapaint
license:             GPL-3
license-file:        LICENSE
author:              David Villegas
maintainer:          dville00@gmail.com
-- copyright:           
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8

executable gapaint
  main-is:             Main.hs       
  -- other-modules:       
  build-depends:       base ==4.6.*, array ==0.4.*, random ==1.0.*, OpenGL ==2.8.*,
                       GLUT ==2.4.*